# cpp-portalis

./: .gitignore  CMakeLists.txt  README.md  test_invalid_config.yaml  test_missing_fields.yaml  valid_config.yaml
config/: aws_config.yaml  certs.yaml
include/: AwsIoTConfig.h  MessageProcessor.h  MqttClient.h  OPCUAClient.h
include/cpp-portalis/: MqttClient.h
src/: AwsIoTConfig.cpp  MessageProcessor.cpp  MqttClient.cpp  OPCUAClient.cpp  main.cpp
tests/: AwsIoTConfigTest.cpp  CMakeLists.txt  MockMqttClient.h  MqttClientTest.cpp
